syntax = "proto3";

package pb;
option go_package = "/api/oauth/pb";

// protoc --go_out=plugins=grpc:. api/oauth/pb/oauth.proto

service OAuthService{
     // token 校验
     rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

message CheckTokenRequest {
    string token = 1;
}

message ClientDetails {
    string clientID = 1;
    int32 accessTokenValiditySeconds = 2;
    int32 refreshTokenValiditySeconds = 3;
    repeated string authorizedGrantTypes =4;
}

message UserDetails {
   int64 userID = 1;
   string username = 2;
   repeated string authorities = 3;
}

message CheckTokenResponse {
    UserDetails userDetails = 1;
    ClientDetails clientDetails = 2;
    bool isValidToken = 3;
    string err = 4;
}
